[package]
name = "stacks-encoding-native-js"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stacks_common = { package = "stacks-common", path = "../stacks-common/." }
clarity = { package = "clarity", path = "../clarity/." }
stacks = { package = "blockstack-core", path = "../." }
hex = "0.4"
sha2 = { version = "0.10", features = ["asm"] }

# [dependencies.serde_json]
# version = "1.0"
# features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
