[package]
name = "stacks-marf-sqlite"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
rand = "0.7.3"
rusqlite = "0.24.2"
stacks-common = { path = "../stacks-common" }
stacks-marf = { path = "../stacks-marf" }

[dev-dependencies]
stacks-common = { path = "../stacks-common", features = ["testing"] }
stacks-marf = { path = "../stacks-marf", features = ["testing"]}