[package]
name = "stacks-marf"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
stacks-common = { path = "../stacks-common" }
rand = "0.7.3"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
serde = "1"
serde_derive = "1"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(target_env = "msvc")))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10" }

[dev-dependencies]
stacks-common = { path = "../stacks-common", features = ["testing"] }