[package]
name = "stacks-node"
version = "0.1.0"
authors = [
    "Jude Nelson <jude@stacks.org>",
    "Aaron Blankstein <aaron@blockstack.com>",
    "Ludo Galabru <ludovic@blockstack.com>",
]
edition = "2021"
resolver = "3"
rust-version = "1.61"

[package.metadata.pinny]
allowed = ["bitcoind", "flaky", "slow"]

[target.'cfg(not(any(target_os = "macos", target_os="windows", target_arch = "arm")))'.dependencies]
tikv-jemallocator.workspace = true

[[bin]]
name = "stacks-node"
path = "src/main.rs"

[[bin]]
name = "stacks-events"
path = "src/stacks_events.rs"

[features]
monitoring_prom = ["stacks/monitoring_prom", "async-h1", "async-std", "http-types"]
slog_json = ["stacks/slog_json", "stacks-common/slog_json", "clarity/slog_json"]
prod-genesis-chainstate = []
default = []
testing = ["stacks-common/testing", "stacks/testing", "clarity/testing"]
build-signer-v3-1-0-0-13 = [
    "signer_v3_1_0_0_13",
    "libsigner_v3_1_0_0_13",
    "stacks_v3_1_00_13",
    "stacks_common_v3_1_00_13",
]

[dependencies]
async-h1 = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }
backtrace.workspace = true
base64.workspace = true
chrono.workspace = true
clarity.workspace = true
http-types = { workspace = true, optional = true }
lazy_static.workspace = true
libc.workspace = true
libsigner.workspace = true
pico-args.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision", "raw_value"] }
slog.workspace = true
stacks.workspace = true
stacks-common.workspace = true
stx-genesis.workspace = true
thiserror.workspace = true
url.workspace = true

# This dependency is used for the multiversion integration tests which live behind the build-v3-1-0-0-13 feature flag
libsigner_v3_1_0_0_13 = { package = "libsigner", git = "https://github.com/stacks-network/stacks-core.git", rev = "8a79aaa7df0f13dfc5ab0d0d0bcb8201c90bcba2", optional = true }
signer_v3_1_0_0_13 = { package = "stacks-signer", git = "https://github.com/stacks-network/stacks-core.git", rev = "8a79aaa7df0f13dfc5ab0d0d0bcb8201c90bcba2", optional = true, features = ["testing", "default"] }
stacks_common_v3_1_00_13 = { package = "stacks-common", git = "https://github.com/stacks-network/stacks-core.git", rev = "8a79aaa7df0f13dfc5ab0d0d0bcb8201c90bcba2", optional = true, features = ["testing", "default"] }
stacks_v3_1_00_13 = { package = "stackslib", git = "https://github.com/stacks-network/stacks-core.git", rev = "8a79aaa7df0f13dfc5ab0d0d0bcb8201c90bcba2", optional = true, features = ["testing", "default"] }

[dev-dependencies]
clarity = { workspace = true, features = ["rusqlite", "testing"] }
http-types.workspace = true
madhouse.workspace = true
mockito.workspace = true
mutants.workspace = true
pinny.workspace = true
proptest.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
serial_test.workspace = true
stacks = { workspace = true, features = ["default", "testing"] }
stacks-common = { workspace = true, features = ["testing"] }
stacks-signer = { workspace = true, features = ["testing"] }
stdext.workspace = true
tempfile.workspace = true
tiny_http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
warp.workspace = true
