[package]
name = "stacks-proc-macros"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Common modules for blockstack_lib, libclarity"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "stacks_proc_macros"
path = "./src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits", "full"] }
quote = "*"
proc-macro2 = "*"
stacks_common = { package = "stacks-common", path = "../stacks-common/." }