[package]
name = "stacks-profiler-macros"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/stacks-network/stacks-core"
repository = "https://github.com/stacks-network/stacks-core"
description = "Macros for the Stacks profiler"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "decentralized", "dapps", "blockchain", "profiler" ]
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true