[package]
name = "stacks-signer"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Stacker signer binary"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "stacks_signer"
path = "src/lib.rs"

[[bin]]
name = "stacks-signer"
path = "src/main.rs"

[dependencies]
backoff = { version = "0.4", default-features = false }
clarity = { path = "../clarity" }
clap = { version = "4.1.1", features = ["derive", "env"] }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
libsigner = { path = "../libsigner" }
libstackerdb = { path = "../libstackerdb" }
prometheus = { workspace = true, optional = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision", "unbounded_depth"] }
slog = { workspace = true }
slog-json = { workspace = true, optional = true }
slog-term = { workspace = true }
stacks-common = { path = "../stacks-common" }
stackslib = { path = "../stackslib" }
thiserror = { workspace = true }
tiny_http = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "fmt", "std", "env-filter"] }
rand = { workspace = true }
url = { workspace = true }
rusqlite = { workspace = true, features = ["functions"] }

[dev-dependencies]
clarity = { path = "../clarity", features = ["testing"] }
stacks-common = { path = "../stacks-common", features = ["testing"] }
stdext = { workspace = true }

[features]
default = []
monitoring_prom = ["prometheus", "tiny_http"]
testing = ["stacks-common/testing"]
