[package]
name = "stacks-signer"
version = "0.0.1"
authors = ["Jude Nelson <jude@stacks.org>"]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Stacker signer binary"
keywords = [
    "stacks",
    "stx",
    "bitcoin",
    "crypto",
    "blockstack",
    "decentralized",
    "dapps",
    "blockchain",
]
readme = "README.md"
resolver = "3"
edition = "2021"

[lib]
name = "stacks_signer"
path = "src/lib.rs"

[[bin]]
name = "stacks-signer"
path = "src/main.rs"

[features]
default = []
monitoring_prom = ["prometheus", "tiny_http"]
testing = ["stacks-common/testing"]

[dependencies]
backoff.workspace = true
clap.workspace = true
clarity.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
libsigner.workspace = true
libstackerdb.workspace = true
prometheus = { workspace = true, optional = true }
rand.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true, features = ["functions"] }
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision", "unbounded_depth"] }
slog.workspace = true
slog-json = { workspace = true, optional = true }
slog-term.workspace = true
stacks-common.workspace = true
stackslib.workspace = true
thiserror.workspace = true
tiny_http = { workspace = true, optional = true }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "fmt", "std", "env-filter"] }
url.workspace = true

[dev-dependencies]
clarity = { workspace = true, features = ["rusqlite", "testing"] }
rand_core.workspace = true
stacks-common = { workspace = true, features = ["testing"] }
stdext.workspace = true
