[package]
name = "stacks-signer"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Stacker signer binary"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "stacks_signer"
path = "src/lib.rs"

[[bin]]
name = "stacks-signer"
path = "src/main.rs"

[dependencies]
backoff = "0.4"
clarity = { path = "../clarity" }
clap = { version = "4.1.1", features = ["derive", "env"] }
hashbrown = { workspace = true }
lazy_static = "1.4.0"
libsigner = { path = "../libsigner" }
libstackerdb = { path = "../libstackerdb" }
prometheus = { version = "0.9", optional = true }
rand_core = "0.6"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
slog-json = { version = "2.3.0", optional = true }
slog-term = "2.6.0"
stacks-common = { path = "../stacks-common" }
stackslib = { path = "../stackslib" }
thiserror = { workspace = true }
tiny_http = { version = "0.12", optional = true }
toml = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = { workspace = true }
url = "2.1.0"
rusqlite = { workspace = true, features = ["functions"] }

[dev-dependencies]
clarity = { path = "../clarity", features = ["testing"] }
stacks-common = { path = "../stacks-common", features = ["testing"] }
stackslib = { path = "../stackslib", features = ["testing"] }
num-traits = "0.2.18"
stdext = "0.3.1"

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[features]
default = []
monitoring_prom = ["prometheus", "tiny_http"]
testing = ["stacks-common/testing", "stackslib/testing"]
