[package]
name = "stackslib"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"
rust-version = "1.80"

[lib]
name = "blockstack_lib"
path = "src/lib.rs"

[[bin]]
name = "clarity-cli"
path = "src/clarity_cli_main.rs"

[dependencies]
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
serde = "1"
serde_derive = "1"
ripemd = "0.1.1"
regex = "1"
mio = "0.6"
lazy_static = "1.4.0"
url = "2.1.0"
percent-encoding = "2.1.0"
prometheus = { version = "0.9", optional = true }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
chrono = { version = "0.4.19", optional = true }
clarity = { path = "../clarity" }
stacks-common = { path = "../stacks-common" }
pox-locking = { path = "../pox-locking" }
libstackerdb = { path = "../libstackerdb" }
siphasher = "0.3.7"
rusqlite = { workspace = true }
time = "0.3.41"
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "synchapi", "winbase"] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["fileapi", "processenv", "winnt"] }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.ed25519-dalek]
workspace = true

[dev-dependencies]
assert-json-diff = "1.0.0"
stdext = "0.3.1"
stx-genesis = { path = "../stx-genesis"}
clarity = { features = ["default", "testing"], path = "../clarity" }
stacks-common = { features = ["default", "testing"], path = "../stacks-common" }
rstest = "0.17.0"
rstest_reuse = "0.5.0"
mutants = "0.0.3"
rlimit = "0.10.2"
chrono = "0.4.19"
tempfile = "3.3"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
insta = { version = "1.37.0", features = ["ron"] }
clarity-types = { package = "clarity-types", path = "../clarity-types", default-features = false }

[features]
default = []
profile-sqlite = []
disable-costs = []
developer-mode = ["clarity/developer-mode"]
monitoring_prom = ["prometheus"]
slog_json = ["stacks-common/slog_json", "clarity/slog_json", "pox-locking/slog_json"]
testing = ["chrono", "stacks-common/testing", "clarity/testing"]

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os="windows")))'.dependencies]
sha2 = { version = "0.10" }
