[package]
name = "stx-genesis"
version = "0.1.0"
authors = ["Matthew Little <matthew@blockstack.com>"]
edition = "2018"
resolver = "2"

[dependencies]
libflate = { workspace = true }

[lib]
name = "stx_genesis"
path = "src/lib.rs"

[build-dependencies]
libflate = { workspace = true }
sha2 = { workspace = true }
