[package]
name = "stx-genesis"
version = "0.1.0"
authors = ["Matthew Little <matthew@blockstack.com>"]
edition = "2018"
resolver = "2"

[dependencies]
libflate = { version = "1.0.3", default-features = false }

[lib]
name = "stx_genesis"
path = "src/lib.rs"

[build-dependencies]
libflate = { version = "1.0.3", default-features = false }
sha2 = { workspace = true }
