[package]
name = "stx-genesis"
version = "0.1.0"
edition = "2024"
authors = ["Matthew Little <matthew@blockstack.com>"]

[package.metadata.cargo-machete]
ignored = ["sha2"]

[lib]
name = "stx_genesis"
path = "src/lib.rs"

[dependencies]
libflate.workspace = true

[build-dependencies]
libflate.workspace = true
sha2.workspace = true
