[package]
name = "marf-squash"
version = "0.1.0"
edition = "2024"

[dependencies]
stackslib = { package = "stackslib", path = "../../stackslib", default-features = false }
stacks-common = { path = "../../stacks-common" }
clap = { version = "4.5.44", features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os = "windows")))'.dependencies]
sha2 = { version = "0.10" }

[dev-dependencies]
tempfile = "3"
