[package]
name = "stacks-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
stackslib = { package = "stackslib", path = "../../stackslib", default-features = false }
clarity = { path = "../../clarity", default-features = false }
stacks-common = { path = "../../stacks-common", default-features = false }
serde_json = { workspace = true }

[dev-dependencies]
stacks-common = { path = "../../stacks-common", default-features = false, features = ["testing"] }
tempfile = { version = "3.3", default-features = false }
